group del user功能
